--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Web site created using create-react-app">
+      <link rel="stylesheet"
+            href="https://use.fontawesome.com/releases/v5.1.1/css/all.css"
     />
     <link rel="apple-touch-icon" href="logo192.png" />
     <!--
